# rc500-reader

./: CMakeLists.txt  Findlohmann_json.cmake
sources/BossReaderWriter/: CMakeLists.txt
sources/json-3.10.4/: CMakeList.txt
